Fixed images an clipping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,15 @@
 .App {
+  
+}
+
+.App-nav-container {
   background-color: #E5E5E5;
 }
 
 .App-nav {
-  margin: 0;
-  padding-bottom: 20px;
-  overflow: hidden;
+  position: absolute;
+  z-index: 2;
+  right: 20px;
 }
 
 .App-nav li {
@@ -30,6 +34,7 @@
   font-family: 'Nova Slim', cursive;
   margin: 0;
   position: absolute;
+  z-index: 2;
   top: 15px;
   left: 15px;
   font-size: 35px;
