--- a/frontend/src/pages/landing-page/landing-page.styles.css
+++ b/frontend/src/pages/landing-page/landing-page.styles.css
@@ -1,5 +1,8 @@
 .LandingPage-image {
     width: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 1;
 }
 
 .LandingPage-title {
@@ -18,6 +21,7 @@
     padding: 10px 30px;
     background-color: #E46E00;
     position: absolute;
+    z-index: 2;
     top: 60%;
     left: 50%;
 }
